# archds.github.io

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Trunk.toml  index.css  index.html  package-lock.json  package.json  trunk-template-1f51e4babc6379fd.js  trunk-template-1f51e4babc6379fd_bg.wasm  trunk-template-2a12dd9ca821141.js  trunk-template-2a12dd9ca821141_bg.wasm  trunk-template-852c24f89553c5fc.js  trunk-template-852c24f89553c5fc_bg.wasm  trunk-template-9ff4d141d8afd4a4.js  trunk-template-9ff4d141d8afd4a4_bg.wasm  trunk-template-a9b68c7d357f09de.js  trunk-template-a9b68c7d357f09de_bg.wasm  trunk-template-fa08c5b83198a2d7.js  trunk-template-fa08c5b83198a2d7_bg.wasm  trunk-template-fea12589402f73d3.js  trunk-template-fea12589402f73d3_bg.wasm
.github/workflows/: deploy.yml
assets/: data.json
src/: app.rs  data.json  data.rs  layout.rs  main.rs  types.rs
src/assets/: data.json  data.yml
src/components/: about.rs  contacts.rs  experience.rs  made.rs  mod.rs  skills.rs
